stoppet overflow?

--- a/app/src/components/topbar/Task/Task.css
+++ b/app/src/components/topbar/Task/Task.css
@@ -13,6 +13,7 @@ textarea {
   border: none;
   outline: none;
   height: 10vmin;
+  width: 90vmin;
   font-size: 1.3em;
 }
 label {
